chore: 更新项目版本为 0.0.1 并完善审计日志
- 更新 pom.xml 版本从 0.0.1-SNAPSHOT 到 0.0.1
- 添加 UTF-8 编码配置到 pom.xml
- 改进审计日志字段分隔符处理，添加 sanitize 方法
- 更新 config.md 配置文档
- 添加生产环境配置和 logback 日志配置